# PatternCPP

./: CMakeLists.txt  GumballMachine.h  HasQuarterState.cpp  HasQuarterState.h  NoQuarterState.cpp  NoQuarterState.h  SoldOutState.h
Adapter and abstract Fabric compose/: AbstractFactory.h  CMakeLists.txt  CountingDuckFactory.cpp  CountingDuckFactory.h  DuckCall.cpp  DuckCall.h  Flock.cpp  Flock.h  GooseAdapter.cpp  GooseAdapter.h  Honk.cpp  Honk.h  MallardDuck.cpp  MallardDuck.h  Observable.cpp  Observable.h  Observer.h  QuackCounter.cpp  QuackCounter.h  QuackLogist.cpp  QuackLogist.h  QuackObservable.h  Quackable.h  main.cpp
Fabric/: CMakeLists.txt  KrasnodarPizza.cpp  KrasnodarPizza.h  PepperoniPizza.cpp  PepperoniPizza.h  Pizza.cpp  Pizza.h  PizzaIngrs.cpp  PizzaIngrs.h  Pizzeria.h  RostovPizza.cpp  RostovPizza.h  RostovPizzeria.cpp  RostovPizzeria.h  VeggiePizza.cpp  VeggiePizza.h  main.cpp
Fabric/Cheeses/: Cheese.h  GoatCheese.h  Russian.h
Fabric/Kolbasing/: Braunschweig.h  Kolbasa.h  Krakowian.h
Fabric/Sauces/: Ketchapp.h  Mayo.h  Sauce.h
Facade/: Amplifier.cpp  Amplifier.h  CMakeLists.txt  CdPlaya.cpp  CdPlaya.h  HomeTheater.cpp  HomeTheater.h  PopCorn.cpp  PopCorn.h  main.cpp
Proxy/: CMakeLists.txt  Proxy.cpp  Proxy.h  RealSubject.cpp  RealSubject.h  Subject.cpp  Subject.h  main.cpp
State and Strategy and Template method/: GumballMachine.cpp  SoldOutState.cpp  SoldState.cpp  SoldState.h  State.h  main.cpp
