cmake_minimum_required(VERSION 3.24)
project(untitled14)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled14 main.cpp Sauces/Sauce.h Sauces/Ketchapp.h Sauces/Mayo.h Kolbasing/Kolbasa.h Kolbasing/Krakowian.h Kolbasing/Braunschweig.h PizzaIngrs.cpp PizzaIngrs.h RostovPizza.cpp RostovPizza.h KrasnodarPizza.cpp KrasnodarPizza.h Pizza.cpp Pizza.h VeggiePizza.cpp VeggiePizza.h Cheeses/Cheese.h Cheeses/Russian.h Cheeses/GoatCheese.h PepperoniPizza.cpp PepperoniPizza.h Pizzeria.h RostovPizzeria.cpp RostovPizzeria.h)
